--- a/archivo.html
+++ b/archivo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>FCC: Tribute Page</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
         <section id="tribute-info">
-            <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+            <h3 id="headline"><strong>Here's a time line of Dr. Borlaug's life:</strong></h3>
             <ul>
                 <li><strong>1914</strong>
                     - Born in Cresco, Iowa</li>
@@ -41,7 +42,15 @@
                 <li><strong>2009</strong>- dies at the age of 95.</li>
             </ul>
         </section>
-        <footer>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a></footer>
+
+        <div class="contenedor"><p id="cita">
+            "Borlaug's life and achievement are testimony to the far-reaching
+            contribution that one man's towering intellect, persistence and
+            scientific vision can make to human peace and progress."
+          </p>
+          <cite>-- Indian Prime Minister Manmohan Singh</cite></div>
+        
+        <footer><strong>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a></strong> </footer>
         
     </main>
 </body>
