--- a/archivo.html
+++ b/archivo.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +9,7 @@
 </head>
 <body>
     <main id="main">
-        <h1 id="tlitle">Dr. Norman Borlaug</h1>
+        <h1 id="title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billon lives</p>
         <figure id="img-div">
             <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="">
